SFUSA/force-app/main/default/objects/EG_and_LMF__c/fields/Balance__c.field-meta.xml
<CustomField>
        <fullName>Balance__c</fullName>
        <formula>IF((RecordType.Name = "EG / DA Budget"), (Budget__c - EGActualSpend__c), IF((RecordType.Name = "LMF Budget"),(Budget__c - LMFActualSpend__c), null))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is your remaining balance (Budget - Actual).</inlineHelpText>
        <label>Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>