SFUSA/force-app/main/default/objects/EG_and_LMF__c/fields/EGActualSpend__c.field-meta.xml
<CustomField>
        <fullName>EGActualSpend__c</fullName>
        <label>EG Actual Spend</label>
        <summarizedField>EGandLMFSpend__c.ActualSpend__c</summarizedField>
        <summaryFilterItems>
            <field>EGandLMFSpend__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>EG / DA Spend</value>
        </summaryFilterItems>
        <summaryForeignKey>EGandLMFSpend__c.ParentEGorLMF__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </CustomField>