SFUSA/force-app/main/default/objects/EG_and_LMF__c/fields/Territory__c.field-meta.xml
<CustomField>
        <fullName>Territory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Territory of EG.</description>
        <label>Territory</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Tags__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>Territory</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Tags__c</referenceTo>
        <relationshipLabel>EGs and LMFs</relationshipLabel>
        <relationshipName>EGs_and_LMFs</relationshipName>
        <type>Lookup</type>
    </CustomField>