SFUSA/force-app/main/default/objects/EG_and_LMF__c/recordTypes/EGDABudget.recordType-meta.xml
<RecordType>
        <fullName>EGDABudget</fullName>
        <active>true</active>
        <description>EG / DA Budget.</description>
        <label>EG / DA Budget</label>
    </RecordType>