SFUSA/force-app/main/default/objects/EG_and_LMF__c/recordTypes/LMFBudget.recordType-meta.xml
<RecordType>
        <fullName>LMFBudget</fullName>
        <active>true</active>
        <description>LMF Budget.</description>
        <label>LMF Budget</label>
    </RecordType>