SFUSA/force-app/main/default/objects/EG_and_LMF__c/listViews/All.listView-meta.xml
<ListView>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Year__c</columns>
        <columns>Territory__c</columns>
        <columns>Budget__c</columns>
        <columns>Balance__c</columns>
        <columns>EGActualSpend__c</columns>
        <columns>LMFActualSpend__c</columns>
        <columns>Distributor__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </ListView>